# exoclaw

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md  SECURITY_ROADMAP.md  TESTING.md  deny.toml  package-lock.json  package.json  playwright.config.ts  session-log-2026-02-08-exoclaw-testing-gateway-stability.md
.cargo/: audit.toml
.github/workflows/: claude-code-review.yml  claude.yml  test-suite.yml
.specify/memory/: constitution.md
benches/: router_bench.rs  sandbox_bench.rs
e2e/: auth-flow.spec.ts
examples/: config.toml
examples/echo-plugin/: Cargo.toml
examples/echo-plugin/src/: lib.rs
examples/mock-channel/: Cargo.toml
examples/mock-channel/src/: lib.rs
scripts/: run-e2e-server.sh  test-all.sh  test-e2e.sh  test-rust.sh  test-wasm-ui.sh
specs/001-core-runtime/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-core-runtime/checklists/: requirements.md
specs/001-core-runtime/contracts/: jsonrpc-spec.md
specs/002-onboard-chat-ui/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-onboard-chat-ui/checklists/: requirements.md
specs/002-onboard-chat-ui/contracts/: routes.md
src/: config.rs  fs_util.rs  lib.rs  main.rs  secrets.rs  types.rs
src/agent/: metering.rs  mod.rs  providers.rs
src/bus/: mod.rs
src/gateway/: auth.rs  mod.rs  protocol.rs  server.rs
src/memory/: episodic.rs  mod.rs  semantic.rs  soul.rs
src/router/: mod.rs
src/sandbox/: capabilities.rs  mod.rs
src/store/: mod.rs
tests/: auth_test.rs  channel_test.rs  config_test.rs  gateway_http_test.rs  gateway_test.rs  memory_test.rs  metering_test.rs  onboard_test.rs  protocol_test.rs  router_test.rs  sandbox_test.rs  store_test.rs  types_test.rs
ui/: Cargo.toml  index.html
ui/src/: app.rs  lib.rs  markdown.rs  state.rs  ws.rs
ui/src/components/: auth_prompt.rs  chat.rs  input.rs  message.rs  mod.rs  status.rs
ui/tests/: wasm.rs
