[package]
name = "exoclaw-ui"
version = "0.1.0"
edition = "2024"
description = "Leptos chat UI for exoclaw gateway"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
leptos_router = { version = "0.7" }
leptos_meta = { version = "0.7" }
gloo-net = { version = "0.6", features = ["websocket"] }
gloo-timers = { version = "0.3", features = ["futures"] }
pulldown-cmark = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "HtmlElement",
    "HtmlTextAreaElement",
    "HtmlInputElement",
    "Element",
    "ScrollIntoViewOptions",
    "ScrollBehavior",
    "KeyboardEvent",
    "Window",
    "Location",
] }
js-sys = "0.3"
futures = "0.3"
log = "0.4"
console_log = "1"
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"
